--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </section>
       <h3>Todo</h3>
       <ul id="incomplete-tasks">
-        <li>
+        <li class="incomplete-tasks__item">
           <input type="checkbox">
           <label class="task">Pay Bills</label>
           <input type="text">
@@ -28,7 +28,7 @@
             <img src="./remove.svg" alt="remove icon">
           </button>
         </li>
-        <li class="edit-mode">
+        <li class="incomplete-tasks__item edit-mode">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
@@ -40,7 +40,7 @@
       </ul>
       <h3>Completed</h3>
       <ul id="completed-tasks">
-        <li>
+        <li class="incomplete-tasks__item">
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
           <input type="text" class="task">
